--- a/portfolio.html
+++ b/portfolio.html
@@ -9,160 +9,167 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
 <body>
     <header>
-        <nav class="navmenu">
-            <a href="/index.html" class="link logo"><span class="web">Web</span><span class="studio">Studio</span></a>
-            <ul class="mkey list">
-                <li class="nkey">
-                    <a href="./index.html" class="link">Студия</a>
-                </li>
-                <li class="nkey">
-                    <a href="./portfolio.html" class="link current">Портфолио</a>
-                </li>
-                <li class="nkey">
-                    <a href="#" class="link">Контакти</a>
-                </li>
-            </ul>
-        </nav>
-        <ul class="contacts list">
-            <li>
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-            </li>
-        </ul>
-    </header>
-    <main>
-        <section class="mainbox">
-            <h1 hidden>Наши работы</h1>
-            <ul class="list">
-                <li class="fkey">
-                    <button type="button">Все</button>
-                </li>
-                <li class="fkey">
-                    <button type="button">Веб-сайты</button>
-                </li>
-                <li class="fkey">
-                    <button type="button">Приложения</button>
-                </li>
-                <li class="fkey">
-                    <button type="button">Дизайн</button>
-                </li>
-                <li class="fkey">
-                    <button type="button">Маркетинг</button>
-                </li>
-            </ul>
-            <ul class="allworks list">
+        <div class="container">
+            <nav class="navmenu">
+                <a href="/index.html" class="link logo"><span class="web">Web</span><span class="studio">Studio</span></a>
+                <ul class="mkey list">
+                    <li class="nkey">
+                        <a href="/" class="link current">Студия</a>
+                    </li>
+                    <li class="nkey">
+                        <a href="./portfolio.html" class="link">Портфолио</a>
+                    </li>
+                    <li class="nkey">
+                        <a href="#" class="link">Контакти</a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="contacts list">
                 <li>
-                    <div>
-                        <a href="" class="link card">
-                            <img src="image/technoquack.jpg"
-                                alt="Ноутбук на экране которого изображены портфолио 2 девушек и мужчины" width="370"
-                                height="294">
-                            <h2>Технокряк</h2>
-                            <p>Веб-сайт</p>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="" class="link card">
-                            <img src="image/poster.jpg" alt="Арт с двумя баскетболистами с мячем в прыжке" width="370"
-                                height="294">
-                            <h2>Постер New Orlean vs Golden Star</h2>
-                            <p>Дизайн</p>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="" class="link card">
-                            <img src="image/restaurant.jpg" alt="Логотип морского ресторана с изображением рыбы"
-                                width="370" height="294">
-                            <h2>Ресторан Seafood</h2>
-                            <p>Приложение</p>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="" class="link card">
-                            <img src="image/prime.jpg" alt="Большие чёрные наушники" width="370" height="294">
-                            <h2>Проект Prime</h2>
-                            <p>Маркетинг</p>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="" class="link card">
-                            <img src="image/boxes.jpg" alt="Две коробки" width="370" height="294">
-                            <h2>Проект Boxes</h2>
-                            <p>Приложение</p>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="" class="link card">
-                            <img src="image/bordersite.jpg" alt="Экран компьтера на котором открыта карта мира"
-                                width="370" height="294">
-                            <h2>Inspiration has no Borders</h2>
-                            <p>Веб-сайт</p>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="" class="link card">
-                            <img src="image/edition.jpg" alt="Книга с фотографиями" width="370" height="294">
-                            <h2>Издание Limited Edition</h2>
-                            <p>Дизайн</p>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="" class="link card">
-                            <img src="image/lab.jpg" alt="Бирка с названием магазина" width="370" height="294">
-                            <h2>Проект LAB</h2>
-                            <p>Маркетинг</p>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        <a href="" class="link card">
-                            <img src="image/growbus.jpg" alt="Руки человека который работает за ноутбуком" width="370"
-                                height="294">
-                            <h2>Growing Business</h2>
-                            <p>Приложение</p>
-                        </a>
-                    </div>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer class="basement">
-        <a href="/index.html" class="link logo"><span class="web">Web</span><span class="studio fwhite">Studio</span></a>
-        <address>
-            <ul class="list">
-                <li class="adress office">
-                    <a href="#" class="link">г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li class="adress">
                     <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
                 </li>
-                <li class="adress">
+                <li>
                     <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
                 </li>
             </ul>
-        </address>
+        </div>
+    </header>
+    <main>
+        <section class="mainbox">
+            <div class="container">
+                <h1 hidden>Наши работы</h1>
+                <ul class="list">
+                    <li class="fkey">
+                        <button type="button">Все</button>
+                    </li>
+                    <li class="fkey">
+                        <button type="button">Веб-сайты</button>
+                    </li>
+                    <li class="fkey">
+                        <button type="button">Приложения</button>
+                    </li>
+                    <li class="fkey">
+                        <button type="button">Дизайн</button>
+                    </li>
+                    <li class="fkey">
+                        <button type="button">Маркетинг</button>
+                    </li>
+                </ul>
+                <ul class="allworks list">
+                    <li>
+                        <div>
+                            <a href="" class="link card">
+                                <img src="image/technoquack.jpg"
+                                    alt="Ноутбук на экране которого изображены портфолио 2 девушек и мужчины" width="370" height="294">
+                                <h2>Технокряк</h2>
+                                <p>Веб-сайт</p>
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="" class="link card">
+                                <img src="image/poster.jpg" alt="Арт с двумя баскетболистами с мячем в прыжке" width="370" height="294">
+                                <h2>Постер New Orlean vs Golden Star</h2>
+                                <p>Дизайн</p>
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="" class="link card">
+                                <img src="image/restaurant.jpg" alt="Логотип морского ресторана с изображением рыбы" width="370"
+                                    height="294">
+                                <h2>Ресторан Seafood</h2>
+                                <p>Приложение</p>
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="" class="link card">
+                                <img src="image/prime.jpg" alt="Большие чёрные наушники" width="370" height="294">
+                                <h2>Проект Prime</h2>
+                                <p>Маркетинг</p>
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="" class="link card">
+                                <img src="image/boxes.jpg" alt="Две коробки" width="370" height="294">
+                                <h2>Проект Boxes</h2>
+                                <p>Приложение</p>
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="" class="link card">
+                                <img src="image/bordersite.jpg" alt="Экран компьтера на котором открыта карта мира" width="370"
+                                    height="294">
+                                <h2>Inspiration has no Borders</h2>
+                                <p>Веб-сайт</p>
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="" class="link card">
+                                <img src="image/edition.jpg" alt="Книга с фотографиями" width="370" height="294">
+                                <h2>Издание Limited Edition</h2>
+                                <p>Дизайн</p>
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="" class="link card">
+                                <img src="image/lab.jpg" alt="Бирка с названием магазина" width="370" height="294">
+                                <h2>Проект LAB</h2>
+                                <p>Маркетинг</p>
+                            </a>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <a href="" class="link card">
+                                <img src="image/growbus.jpg" alt="Руки человека который работает за ноутбуком" width="370" height="294">
+                                <h2>Growing Business</h2>
+                                <p>Приложение</p>
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
+    <footer class="basement">
+        <div class="container footer-container">
+            <div class="footer-logo">
+                <a href="/index.html" class="link logo"><span class="web">Web</span><span
+                        class="studio fwhite">Studio</span></a>
+            </div>
+            <address>
+                <ul class="list">
+                    <li class="adress office">
+                        <a href="#" class="link">г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li class="adress">
+                        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                    </li>
+                    <li class="adress adress-phone">
+                        <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
