--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </section>
         <section class="peculiarities">
-            <div class="container peculiarities-container">
+            <div class="container section">
                 <ul class="list">
                     <li class="detail">
                         <h3 class="pcaption">Внимание к деталям</h3>
@@ -86,7 +86,7 @@
             </div>
         </section>
         <section class="ourteam">
-            <div class="container ourteam-container">
+            <div class="container section">
                 <h2 class="hcaption">Наша команда</h2>
                 <ul class="list">
                     <li class="team">
