--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header-container">
         <div class="container">
             <nav class="navmenu">
                 <a href="/index.html" class="link logo"><span class="web">Web</span><span class="studio">Studio</span></a>
