--- a/portfolio.html
+++ b/portfolio.html
@@ -14,16 +14,18 @@
 </head>
 
 <body>
-    <header class="header-container">
-        <div class="container">
-            <nav class="navmenu">
+    <header class="header-border">
+        <div class="container header-flex">
+            <div class="logo-flex">
                 <a href="/index.html" class="link logo"><span class="web">Web</span><span class="studio">Studio</span></a>
+            </div>
+            <nav class="navmenu">
                 <ul class="mkey list">
                     <li class="nkey">
-                        <a href="/" class="link current">Студия</a>
+                        <a href="/" class="link">Студия</a>
                     </li>
                     <li class="nkey">
-                        <a href="./portfolio.html" class="link">Портфолио</a>
+                        <a href="./portfolio.html" class="link current">Портфолио</a>
                     </li>
                     <li class="nkey">
                         <a href="#" class="link">Контакти</a>
@@ -34,17 +36,17 @@
                 <li>
                     <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="contacts-item">
                     <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
     </header>
     <main>
-        <section class="mainbox">
-            <div class="container">
-                <h1 hidden>Наши работы</h1>
-                <ul class="list">
+        <section class="main-container">
+            <div class="mainbox">
+                <h1 class="visually-hidden">Наши работы</h1>
+                <ul class="list container-mainbox">
                     <li class="fkey">
                         <button type="button">Все</button>
                     </li>
@@ -62,87 +64,105 @@
                     </li>
                 </ul>
                 <ul class="allworks list">
-                    <li>
+                    <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
                                 <img src="image/technoquack.jpg"
                                     alt="Ноутбук на экране которого изображены портфолио 2 девушек и мужчины" width="370" height="294">
-                                <h2>Технокряк</h2>
-                                <p>Веб-сайт</p>
+                                <div class="allworks-text">
+                                    <h2>Технокряк</h2>
+                                    <p>Веб-сайт</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
+                    <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
                                 <img src="image/poster.jpg" alt="Арт с двумя баскетболистами с мячем в прыжке" width="370" height="294">
+                                <div class="allworks-text">
                                 <h2>Постер New Orlean vs Golden Star</h2>
                                 <p>Дизайн</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
+                    <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
                                 <img src="image/restaurant.jpg" alt="Логотип морского ресторана с изображением рыбы" width="370"
                                     height="294">
-                                <h2>Ресторан Seafood</h2>
-                                <p>Приложение</p>
+                                <div class="allworks-text">
+                                    <h2>Ресторан Seafood</h2>
+                                    <p>Приложение</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
+                    <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
                                 <img src="image/prime.jpg" alt="Большие чёрные наушники" width="370" height="294">
-                                <h2>Проект Prime</h2>
-                                <p>Маркетинг</p>
+                                <div class="allworks-text">
+                                    <h2>Проект Prime</h2>
+                                    <p>Маркетинг</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
+                    <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
                                 <img src="image/boxes.jpg" alt="Две коробки" width="370" height="294">
-                                <h2>Проект Boxes</h2>
-                                <p>Приложение</p>
+                                <div class="allworks-text">
+                                    <h2>Проект Boxes</h2>
+                                    <p>Приложение</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
+                    <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
                                 <img src="image/bordersite.jpg" alt="Экран компьтера на котором открыта карта мира" width="370"
                                     height="294">
-                                <h2>Inspiration has no Borders</h2>
-                                <p>Веб-сайт</p>
+                                <div class="allworks-text">
+                                    <h2>Inspiration has no Borders</h2>
+                                    <p>Веб-сайт</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
+                    <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
                                 <img src="image/edition.jpg" alt="Книга с фотографиями" width="370" height="294">
-                                <h2>Издание Limited Edition</h2>
-                                <p>Дизайн</p>
+                                <div class="allworks-text">
+                                    <h2>Издание Limited Edition</h2>
+                                    <p>Дизайн</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
+                    <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
                                 <img src="image/lab.jpg" alt="Бирка с названием магазина" width="370" height="294">
-                                <h2>Проект LAB</h2>
-                                <p>Маркетинг</p>
+                                <div class="allworks-text">
+                                    <h2>Проект LAB</h2>
+                                    <p>Маркетинг</p>
+                                </div>
                             </a>
                         </div>
                     </li>
-                    <li>
+                    <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
                                 <img src="image/growbus.jpg" alt="Руки человека который работает за ноутбуком" width="370" height="294">
-                                <h2>Growing Business</h2>
-                                <p>Приложение</p>
+                                <div class="allworks-text">
+                                    <h2>Growing Business</h2>  
+                                    <p>Приложение</p>
+                                </div>
                             </a>
                         </div>
                     </li>
