--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
@@ -17,12 +18,13 @@
     <header class="header-border">
         <div class="container header-flex">
             <div class="logo-flex">
-                <a href="/index.html" class="link logo"><span class="web">Web</span><span class="studio">Studio</span></a>
+                <a href="/index.html" class="link logo"><span class="web">Web</span><span
+                        class="studio">Studio</span></a>
             </div>
             <nav class="navmenu">
                 <ul class="mkey list">
                     <li class="nkey">
-                        <a href="/" class="link">Студия</a>
+                        <a href="./index.html" class="link">Студия</a>
                     </li>
                     <li class="nkey">
                         <a href="./portfolio.html" class="link current">Портфолио</a>
@@ -68,7 +70,8 @@
                         <div>
                             <a href="" class="link card">
                                 <img src="image/technoquack.jpg"
-                                    alt="Ноутбук на экране которого изображены портфолио 2 девушек и мужчины" width="370" height="294">
+                                    alt="Ноутбук на экране которого изображены портфолио 2 девушек и мужчины"
+                                    width="370" height="294">
                                 <div class="allworks-text">
                                     <h2>Технокряк</h2>
                                     <p>Веб-сайт</p>
@@ -79,10 +82,11 @@
                     <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
-                                <img src="image/poster.jpg" alt="Арт с двумя баскетболистами с мячем в прыжке" width="370" height="294">
+                                <img src="image/poster.jpg" alt="Арт с двумя баскетболистами с мячем в прыжке"
+                                    width="370" height="294">
                                 <div class="allworks-text">
-                                <h2>Постер New Orlean vs Golden Star</h2>
-                                <p>Дизайн</p>
+                                    <h2>Постер New Orlean vs Golden Star</h2>
+                                    <p>Дизайн</p>
                                 </div>
                             </a>
                         </div>
@@ -90,8 +94,8 @@
                     <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
-                                <img src="image/restaurant.jpg" alt="Логотип морского ресторана с изображением рыбы" width="370"
-                                    height="294">
+                                <img src="image/restaurant.jpg" alt="Логотип морского ресторана с изображением рыбы"
+                                    width="370" height="294">
                                 <div class="allworks-text">
                                     <h2>Ресторан Seafood</h2>
                                     <p>Приложение</p>
@@ -124,8 +128,8 @@
                     <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
-                                <img src="image/bordersite.jpg" alt="Экран компьтера на котором открыта карта мира" width="370"
-                                    height="294">
+                                <img src="image/bordersite.jpg" alt="Экран компьтера на котором открыта карта мира"
+                                    width="370" height="294">
                                 <div class="allworks-text">
                                     <h2>Inspiration has no Borders</h2>
                                     <p>Веб-сайт</p>
@@ -158,9 +162,10 @@
                     <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
-                                <img src="image/growbus.jpg" alt="Руки человека который работает за ноутбуком" width="370" height="294">
+                                <img src="image/growbus.jpg" alt="Руки человека который работает за ноутбуком"
+                                    width="370" height="294">
                                 <div class="allworks-text">
-                                    <h2>Growing Business</h2>  
+                                    <h2>Growing Business</h2>
                                     <p>Приложение</p>
                                 </div>
                             </a>
