--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="container header-flex">
             <div class="logo-flex">
-                <a href="/index.html" class="link logo"><span class="web">Web</span><span
+                <a href="./index.html" class="link logo"><span class="web">Web</span><span
                         class="studio">Studio</span></a>
             </div>
             <nav class="navmenu">
