--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <header class="header-border">
         <div class="container header-flex">
             <div class="logo-flex">
-                <a href="/index.html" class="link logo"><span class="web">Web</span><span
+                <a href="./index.html" class="link logo"><span class="web">Web</span><span
                         class="studio">Studio</span></a>
             </div>
             <nav class="navmenu">
