--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class="navmenu">
                 <ul class="mkey list">
                     <li class="nkey">
-                        <a href="/" class="link current">Студия</a>
+                        <a href="./index.html" class="link current">Студия</a>
                     </li>
                     <li class="nkey">
                         <a href="./portfolio.html" class="link">Портфолио</a>
