--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <button type="button" class="hero-button">Заказать услугу</button>
             </div>
         </section>
-        <section class="peculiarities">
-            <div class="container section">
+        <section class="peculiarities section">
+            <div class="container">
                 <ul class="list peculiarities-flex">
                     <li class="detail">
                         <h3 class="pcaption">Внимание к деталям</h3>
@@ -73,7 +73,7 @@
                 </ul>
             </div>
         </section>
-        <section class="ourwork">
+        <section class="ourwork section section-ourwork">
             <div class="container ourwork-container">
                 <h2 class="hcaption">Чем мы занимаемся</h2>
                 <ul class="list ourwork-flex">
@@ -91,8 +91,8 @@
                 </ul>
             </div>
         </section>
-        <section class="ourteam">
-            <div class="container section">
+        <section class="ourteam section">
+            <div class="container">
                 <h2 class="hcaption">Наша команда</h2>
                 <ul class="list ourteam-flex">
                     <li class="team ourteam-item">
@@ -139,8 +139,8 @@
             </div>
         </section>
     </main>
-    <footer class="basement">
-        <div class="container footer-container">
+    <footer class="basement footer-container">
+        <div class="container">
             <div class="footer-logo">
                 <a href="/index.html" class="link logo"><span class="web">Web</span><span
                         class="studio fwhite">Studio</span></a>
