--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
     </header>
     <main>
         <section class="main-container">
-            <div class="mainbox">
+            <div class="container">
                 <h1 class="visually-hidden">Наши работы</h1>
                 <ul class="list container-mainbox">
                     <li class="fkey">
@@ -70,8 +70,7 @@
                         <div>
                             <a href="" class="link card">
                                 <img src="image/technoquack.jpg"
-                                    alt="Ноутбук на экране которого изображены портфолио 2 девушек и мужчины"
-                                    width="370" height="294">
+                                    alt="Ноутбук на экране которого изображены портфолио 2 девушек и мужчины" width="370" height="294">
                                 <div class="allworks-text">
                                     <h2>Технокряк</h2>
                                     <p>Веб-сайт</p>
@@ -82,8 +81,7 @@
                     <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
-                                <img src="image/poster.jpg" alt="Арт с двумя баскетболистами с мячем в прыжке"
-                                    width="370" height="294">
+                                <img src="image/poster.jpg" alt="Арт с двумя баскетболистами с мячем в прыжке" width="370" height="294">
                                 <div class="allworks-text">
                                     <h2>Постер New Orlean vs Golden Star</h2>
                                     <p>Дизайн</p>
@@ -94,8 +92,8 @@
                     <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
-                                <img src="image/restaurant.jpg" alt="Логотип морского ресторана с изображением рыбы"
-                                    width="370" height="294">
+                                <img src="image/restaurant.jpg" alt="Логотип морского ресторана с изображением рыбы" width="370"
+                                    height="294">
                                 <div class="allworks-text">
                                     <h2>Ресторан Seafood</h2>
                                     <p>Приложение</p>
@@ -128,8 +126,8 @@
                     <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
-                                <img src="image/bordersite.jpg" alt="Экран компьтера на котором открыта карта мира"
-                                    width="370" height="294">
+                                <img src="image/bordersite.jpg" alt="Экран компьтера на котором открыта карта мира" width="370"
+                                    height="294">
                                 <div class="allworks-text">
                                     <h2>Inspiration has no Borders</h2>
                                     <p>Веб-сайт</p>
@@ -162,8 +160,7 @@
                     <li class="allworks-item">
                         <div>
                             <a href="" class="link card">
-                                <img src="image/growbus.jpg" alt="Руки человека который работает за ноутбуком"
-                                    width="370" height="294">
+                                <img src="image/growbus.jpg" alt="Руки человека который работает за ноутбуком" width="370" height="294">
                                 <div class="allworks-text">
                                     <h2>Growing Business</h2>
                                     <p>Приложение</p>
@@ -175,8 +172,8 @@
             </div>
         </section>
     </main>
-    <footer class="basement">
-        <div class="container footer-container">
+    <footer class="basement footer-container">
+        <div class="container">
             <div class="footer-logo">
                 <a href="/index.html" class="link logo"><span class="web">Web</span><span
                         class="studio fwhite">Studio</span></a>
